scrollbar fixed

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -6,16 +6,3 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-::-webkit-scrollbar {
-  background-color: #3A3C3F;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: #fff;
-  border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background-color: #aaa;
-}
-
